<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:title=""
        >
      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginEnd="16dp"
          >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/projectlogo"
            android:scaleType="centerInside"
            android:src="@drawable/betterdoctor_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

      </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>
  </android.support.design.widget.AppBarLayout>


  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appbar"
      >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <LinearLayout
          android:id="@+id/llLocation"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen20"
          android:background="@color/white"
          android:drawablePadding="10dp"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
      </LinearLayout>


      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etDoctorsName"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen16"
          android:hint="@string/doctor_s_name"
          android:inputType="textCapWords"
          android:textColor="@color/black"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/llLocation"
          />

      <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
          android:id="@+id/etSpecialised"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:hint="@string/specialisation_eg_pediatrician_gynecology"
          android:inputType="textCapWords"
          android:textColor="@color/colorPrimaryLight"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etDoctorsName"
          />

      <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
          android:id="@+id/etPractises"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:hint="@string/practises_in"
          android:inputType="textCapWords"
          android:textColor="@color/colorPrimaryLight"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etSpecialised"
          />

      <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
          android:id="@+id/etInsurances"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:hint="@string/insurances_in"
          android:inputType="textCapWords"
          android:textColor="@color/colorPrimaryLight"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etPractises"
          />

      <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
          android:id="@+id/etDisease"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:hint="@string/disease_or_symptoms"
          android:inputType="textCapWords"
          android:textColor="@color/colorPrimaryLight"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etInsurances"
          />

      <android.support.v7.widget.AppCompatTextView
          android:id="@+id/tvDoctorsGender"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dimen20"
          android:layout_marginTop="@dimen/dimen10"
          android:text="@string/doctor_s_gender"
          android:textColor="#ccc"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etDisease"
          />

      <RadioGroup
          android:id="@+id/rgGender"
          android:layout_width="@dimen/dimen0"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvDoctorsGender"
          >
        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen5"
            android:text="@string/male"
            android:textColor="#ccc"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/rbFeMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen5"
            android:text="@string/female"
            android:textColor="#ccc"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/rbBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="#ccc"
            android:textStyle="bold"
            />
      </RadioGroup>

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etLocation"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dimen16"
          android:layout_marginStart="@dimen/dimen16"
          android:layout_marginTop="@dimen/dimen10"
          android:hint="@string/location_eg_california"
          android:inputType="textCapWords"
          android:textColor="@color/colorPrimaryLight"
          android:textColorHint="#ccc"
          android:textSize="@dimen/textSize14"
          android:textStyle="bold"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/rgGender"
          />


      <Button
          android:id="@+id/btSearch"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_marginBottom="@dimen/dimen20"
          android:layout_marginTop="@dimen/dimen20"
          android:background="@drawable/bg_button_corner_small_curved_pink"
          android:gravity="center"
          android:text="@string/search"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/rgGender"
          />
    </android.support.constraint.ConstraintLayout>

  </ScrollView>
</android.support.constraint.ConstraintLayout>